--- a/public/css/shortcode/header.css
+++ b/public/css/shortcode/header.css
@@ -250,7 +250,8 @@
 }
 /* Sub Menu 1st Level */
 .main-menu nav > ul ul {
-  background-color: #222;
+  /*background-color: #222;*/
+  background-color: rgba(0,0,0,0.7);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   left: -20px;
   margin-top: 30px;
