--- a/public/css/shortcode/hero-slider.css
+++ b/public/css/shortcode/hero-slider.css
@@ -19,7 +19,8 @@
 /* Nivo Slider */
 #hero-slider {}
 .nivo-caption {
-  background-color: rgba(0, 0, 0, 0.6);
+  /*background-color: rgba(0, 0, 0, 0.6);*/
+  background-color: rgba(0, 0, 0, 0.2);
   height: 100%;
   opacity: 1;
   padding: 0;
@@ -109,6 +110,7 @@
   border-radius: 0 0 4px 4px;
   padding: 0 20px 15px;
   width: 270px;
+  
 }
 .find-course-form h5 {
   background-color: #fff;
