--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -180,7 +180,10 @@
 	}
 	/* Course */
 	.course-item {
-	  padding: 70px 60px;
+      /* padding: 70px 60px;
+      padding: 25px 0px;*/
+      padding: 25px 15px 30px;
+
 	}
 	.ts-arrows {
 	  display: none;
@@ -207,7 +210,7 @@
 	}
 }
 
- 
+
 /* small mobile :320px. */
 @media (max-width: 767px) {
 	.container, .header-full-width .container {
@@ -402,7 +405,7 @@
 	  text-align: center;
 	}
 }
- 
+
 /* Large Mobile :480px. */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 	.container, .header-full-width .container {
@@ -444,6 +447,6 @@
 	/* Instructor */
 	.instructor-tab-list li {
 	  width: 25%;
-	} 
+	}
 }
- 
+
