--- a/public/css/quintamarcha.css
+++ b/public/css/quintamarcha.css
@@ -73,7 +73,75 @@
     flex-direction: initial;
 }
 
+@media (max-width: 1023px) { 
+
+    #hero-area {
+        display: none;
+    }
+
+    .page-banner-area {
+        display: none;
+    }
+
+    #scrollUp {
+        z-index: 1!important;
+    }
+
+    .header-bottom.sticky.stick {
+        z-index: 9999!important;
+    }
+
+    .card.test {
+        width: 100%!important;
+    }
+
+    .header-top-left p span {
+        font-size: 11px;
+    }
+
+    .header-top-right p span {
+        font-size: 11px;
+    }
+
+}
+
+@media (min-width: 576px) {
+    .modal-dialog {
+        max-width: 800px;
+        margin: 3.75rem auto;
+    }
+}
+
+
+/*
+@media (min-width: 1024px) {
+
+    .footer-area {
+        bottom: 0px;
+        position: fixed;
+        width: 100%;
+    }
+        
+}*/
+
+.card-img-top {
+    max-width: 100%;
+    height: 15em;
+}
+
+.form-check.test {
+    margin: 5em auto;
+}
+
+.modal-dialog {
+    z-index: 21342354254345!important;
+}
+
+
+
 /* #preview{
     height: 200px;
     width: 200px;
 }*/
+
+
